implemented the caching mechanism but the alerts mechanism is not working

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "pricetracker",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test-fetch": "ts-node src/testCryptoFetch.ts",
+    "start": "npx ts-node src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,12 +15,14 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.9.5",
+    "node-cron": "^3.0.3",
     "redis": "^4.7.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.6",
+    "@types/node-cron": "^3.0.11",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
